crates/weft-snapshots/tests/snapshots/json/corpus-leaderboard.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-leaderboard as json
---
{
  "weft": "0.1",
  "root": {
    "kind": "screen",
    "id": "leaderboard",
    "props": {
      "label": "Leaderboard"
    },
    "children": [
      {
        "kind": "heading",
        "id": "title",
        "props": {
          "level": 1
        },
        "children": [
          "Leaderboard"
        ]
      },
      {
        "kind": "stack",
        "id": "leader",
        "props": {
          "direction": "row",
          "gap": {
            "token": "space.xs"
          }
        },
        "children": [
          {
            "kind": "text",
            "id": "leader-label",
            "children": [
              "In the lead:"
            ]
          },
          {
            "kind": "text",
            "id": "leader-name",
            "props": {
              "text": {
                "bind": "$.players.0.name"
              }
            }
          }
        ]
      },
      {
        "kind": "list",
        "id": "players",
        "props": {
          "ordered": true
        },
        "children": [
          {
            "kind": "each",
            "id": "player-each",
            "props": {
              "as": "player",
              "in": {
                "bind": "$.players"
              }
            },
            "children": [
              {
                "kind": "item",
                "id": "player",
                "children": [
                  {
                    "kind": "text",
                    "id": "player-name",
                    "props": {
                      "text": {
                        "bind": "$player.name"
                      }
                    }
                  },
                  {
                    "kind": "text",
                    "id": "player-score",
                    "props": {
                      "text": {
                        "bind": "$player.score"
                      },
                      "tone": "muted"
                    }
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
